test/Fail/Issue2550.err
Issue2550.agda:43.13-17: error: [UnequalTerms]
The terms
  (λ { (r , refl) → proj₂ (P.f (from q) r) }) x
and
  q .proj₂ x
are not equal at type R (i₁ .proj₁) (i₁ .proj₂)
when checking that the expression refl has type to (from q) ≡ q
